Disable user select on tablets, Fixes #2655

--- a/styles/XH.scss
+++ b/styles/XH.scss
@@ -194,3 +194,7 @@ body.xh-app {
     text-transform: uppercase;
   }
 }
+
+.xh-tablet * {
+  user-select: none !important;
+}
